# docxbrief_stageA

./: .gitignore  README.md  docxbrief_stageB_design_v0_0_1.adoc  pyproject.toml
b/results/: RESULT-20260128-3f2a.yaml  RESULT-test.yaml  patch-20260128-3f2a.diff  patch-test.diff
b/tasks/: TASK-test-ashigaru1.yaml
examples/: run_demo.sh
examples/docs/: レトルトルーで作るビーフカレー_レシピ.docx
src/docxbrief/: bdispatch.py  build.py  cli.py  config.py  diffutil.py  extract.py  render.py  reset.py  scan.py  shell.py  state.py  status.py  summarize.py
src/docxbrief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: docxbrief.yaml
tools/: repro-await.sh  tmux-b.sh  tmux-dev.sh
